<resources>
    <string name="app_name">GoogleMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="selected_item">Selected item:</string>
    <string name="room">Room</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit_or_delete">Edit Or Delete</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="view_data">View Data</string>
    <string name="room_google_map">Room Google Map</string>
    <string name="title_activity_map_dynamic">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="edit_delete_map">Edit, Delete, Map</string>
</resources>